fixing overflown issues on navbar

--- a/src/layout/Navigation/style.scss
+++ b/src/layout/Navigation/style.scss
@@ -9,6 +9,7 @@ nav{
   padding: 1rem 5rem;
   background-color: $white;
   color: $black;
+  overflow-x: hidden;
 }
 
 #nav-logo{
@@ -59,6 +60,7 @@ nav{
     transform: translateX(100%);
     transition: all 0.3s ease-in;
     z-index: 2;
+    background: $white;
     @include flex(column, space-evenly, center);
     &.active{
       transform: translateX(0%);
