--- a/src/styles/abstract/_global.scss
+++ b/src/styles/abstract/_global.scss
@@ -64,7 +64,7 @@
   }
 
   body{
-    overflow-x: hidden;
+    overflow: hidden;
   }
   
   h1 {
